OPENEJB-1786 Improve client logging
git-svn-id: https://svn.apache.org/repos/asf/openejb/branches/openejb-3.1.x@1294939 13f79535-47bb-0310-9956-ffa450edef68